--- a/epochapp/epochapp/doctype/approval_master/approval_master.json
+++ b/epochapp/epochapp/doctype/approval_master/approval_master.json
@@ -7,7 +7,7 @@
  "beta": 0, 
  "creation": "2018-05-04 13:54:19.995887", 
  "custom": 0, 
- "description": "Defines workflow states and rules for a document.", 
+ "description": "", 
  "docstatus": 0, 
  "doctype": "DocType", 
  "document_type": "Document", 
@@ -20,7 +20,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "description": "DocType on which this Workflow is applicable.", 
+   "description": "DocType on which this Approval Workflow is applicable.", 
    "fieldname": "document_type", 
    "fieldtype": "Link", 
    "hidden": 0, 
@@ -85,7 +85,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "description": "Different \"States\" this document can exist in. Like \"Open\", \"Pending Approval\" etc.", 
+   "description": "", 
    "fieldname": "approval_levels", 
    "fieldtype": "Section Break", 
    "hidden": 0, 
@@ -117,7 +117,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "description": "All possible Workflow States and roles of the workflow. Docstatus Options: 0 is\"Saved\", 1 is \"Submitted\" and 2 is \"Cancelled\"", 
+   "description": "", 
    "fieldname": "approval_transition", 
    "fieldtype": "Table", 
    "hidden": 0, 
@@ -156,7 +156,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2018-05-04 14:01:49.551205", 
+ "modified": "2018-05-07 16:27:39.486319", 
  "modified_by": "Administrator", 
  "module": "Epochapp", 
  "name": "Approval Master", 
