--- a/epochapp/epochapp/doctype/approval_master/approval_master.json
+++ b/epochapp/epochapp/doctype/approval_master/approval_master.json
@@ -3,7 +3,7 @@
  "allow_guest_to_view": 0, 
  "allow_import": 1, 
  "allow_rename": 1, 
- "autoname": "document_type", 
+ "autoname": "field:document_type", 
  "beta": 0, 
  "creation": "2018-05-04 13:54:19.995887", 
  "custom": 0, 
@@ -156,7 +156,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2018-05-07 16:27:39.486319", 
+ "modified": "2018-05-07 16:31:20.507227", 
  "modified_by": "Administrator", 
  "module": "Epochapp", 
  "name": "Approval Master", 
