--- a/epochapp/epochapp/doctype/approval_transition/approval_transition.json
+++ b/epochapp/epochapp/doctype/approval_transition/approval_transition.json
@@ -30,7 +30,7 @@
    "label": "Approval Level", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "\nApproval Level 1\nApproval Level 2\nApproval Level 3\nApproval Level 4\nApproval Level 5\n", 
+   "options": "\nApproval Level 1\nApproval Level 2\nApproval Level 3\nApproval Level 4\nApproval Level 5\nApproval Level 6\n", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -119,7 +119,7 @@
  "issingle": 0, 
  "istable": 1, 
  "max_attachments": 0, 
- "modified": "2018-05-07 16:23:41.560191", 
+ "modified": "2018-05-07 16:31:41.224032", 
  "modified_by": "Administrator", 
  "module": "Epochapp", 
  "name": "Approval Transition", 
